--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,7 +50,7 @@ jobs:
   deploy_to_ecs:
     name: Deploy to ECS Fargate
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'  && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout repository
@@ -93,7 +93,7 @@ jobs:
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_OUTPUT
 
       # ------------------------------------
-      # 2.3. DOWNLOAD CURRENT TASK DEFINITION AND DEPLOY
+      # 2.3. DOWNLOAD CURRENT TASK DEFINITION AND DEPLOY WITH NEW IMAGE
       # ------------------------------------
       - name: Download current task definition
         run: |
@@ -109,8 +109,6 @@ jobs:
           task-definition: task-definition.json
           container-name: ${{ vars.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.IMAGE_URI }}
-#          image: ${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_REPO }}:${{ steps.generate_image_tag.outputs.TAG }}
-
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
